-
Bug
-
Resolution: Done
-
P1: Critical
-
4.6.3
-
None
-
Mac OS X 10.6
-
-
84756e043fa2bd9c83b24abffb280290ad3667cd
Click on Drawer & then on Sheet, the example always crashes. Only on Cocoa
Thread 0 Crashed: Dispatch queue: com.apple.main-thread
0 libobjc.A.dylib 0x00007fff876d40b2 _cache_getImp + 18
1 libobjc.A.dylib 0x00007fff876dbe8f lookUpMethod + 46
2 libobjc.A.dylib 0x00007fff876d67e4 class_respondsToSelector + 30
3 com.apple.CoreFoundation 0x00007fff86d53df3 objectIsKindOfClass + 51
4 com.apple.CoreFoundation 0x00007fff86d53e82 __exceptionMatch + 18
5 libobjc.A.dylib 0x00007fff876dca86 _objc_exception_do_catch + 114
6 libstdc++.6.dylib 0x00007fff8567016e get_adjusted_ptr(std::type_info const*, std::type_info const*, void**) + 82
7 libstdc++.6.dylib 0x00007fff856708de __gxx_personality_v0 + 725
8 libSystem.B.dylib 0x00007fff84fca3c1 _Unwind_RaiseException + 145
9 libSystem.B.dylib 0x00007fff84fd7c85 _Unwind_Resume_or_Rethrow + 37
10 libstdc++.6.dylib 0x00007fff85670b87 __cxa_rethrow + 73
11 QtCore 0x0000000100ca7d08 QCoreApplication::notifyInternal(QObject*, QEvent*) + 152
12 QtGui 0x00000001000901ac qt_sendSpontaneousEvent(QObject*, QEvent*) + 44
13 QtGui 0x0000000100047ba9 qt_mac_handleMouseEvent(void*, void*, QEvent::Type, Qt::MouseButton) + 2265
14 QtGui 0x0000000100038686 -[QCocoaView mouseUp:] + 22
15 com.apple.AppKit 0x00007fff8220dfa5 -[NSWindow sendEvent:] + 5547
16 QtGui 0x000000010003f8bc -[QCocoaWindow sendEvent:] + 236
17 com.apple.AppKit 0x00007fff82143662 -[NSApplication sendEvent:] + 4719
18 QtGui 0x0000000100042e5a -[QNSApplication sendEvent:] + 74
19 com.apple.AppKit 0x00007fff820da0aa -[NSApplication run] + 474
20 QtGui 0x000000010004ca04 QEventDispatcherMac::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 1588
21 QtCore 0x0000000100d7fef4 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 68
22 QtCore 0x0000000100d80204 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 180
23 QtCore 0x0000000100d815bc QCoreApplication::exec() + 188
24 com.yourcompany.windowflags 0x0000000100005825 main + 82 (main.cpp:50)
25 com.yourcompany.windowflags 0x0000000100002624 start + 52