Crash while changing the windows flags from a Qt::Drawer window on Cocoa

The crash was caused while checking the visibility of the toolbar inside
a native cocoa window. There is no toolbar for a drawer window.

Task-number: QTBUG-11138
Reviewed-by: Denis
(cherry picked from commit 84756e043fa2bd9c83b24abffb280290ad3667cd)